--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -17,4 +17,51 @@ body {
     100% {
         background-position: 0% 50%;
     }
+} */
+body{
+    background: url("https://drive.google.com/uc?export=view&id=1dr9-ghn8z2DFU47PGNMEZJVU1KoCwJg3");
+        background-repeat: no-repeat;
+        background-size:100% ;
+        background-attachment: fixed;
+        /* background: scroll; */
+    /* background-image: "https://drive.google.com/uc?export=view&id=1dr9-ghn8z2DFU47PGNMEZJVU1KoCwJg3"; */
+}
+
+.xenialogo{
+    animation: glow 3000ms infinite alternate-reverse;
+}
+@keyframes glow {
+    0% {
+        filter: brightness(1);
+    }
+
+    50% {
+        filter: brightness(1.25);
+    }
+
+    100% {
+        filter: brightness(1);
+    }
+}
+::-webkit-scrollbar-track {
+    visibility: hidden;
+    background: transparent;
+}
+
+::-webkit-scrollbar {
+
+    background-color: transparent;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(#00c6ff, transparent);
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(#8a0fc8, transparent);
 }
