--- a/client/src/pages/leaderboard/leaderboard.css
+++ b/client/src/pages/leaderboard/leaderboard.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Patrick+Hand&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Patrick+Hand&display=swap'); */
 
 /* * {
     padding: 0;
