--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -12,6 +12,8 @@
 .card {
     text-align: center;
     margin-bottom: 30px;
+    border: 5px solid rgb(30, 165, 180);
+    border-radius: 1ch;
 }
 
 /* .image_cric{
@@ -22,7 +24,6 @@ height: 200px;
     position: relative;
     overflow: hidden;
 
-    border: 5px solid white;
 }
 
 
@@ -46,7 +47,7 @@ height: 200px;
 
 
 .card-content {
-    background: white;
+    background: rgba(17, 110, 186, 0.55);
     padding: 20px 0;
 }
 
@@ -60,10 +61,18 @@ height: 200px;
 
 .card-post {
     display: inline-block;
-    color: deeppink;
+    color: rgb(244, 124, 226);
 }
 
 .card:hover .card-img::after {
     bottom: 0;
 }
+.sticky201 {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
 
+.fontname{
+font-size: 17px;
+}
